--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.15.1",
+    "dayjs": "^1.11.13",
     "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
     "react": "^18.2.0",
