feat: in memory, localstorage 기능 추가

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:storage": "vite --mode localStorage",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
